# ada_ros2

ada_calibrate_camera/ada_calibrate_camera/: calibrate_camera_node.py  publish_camera_extrinsics_node.py
ada_calibrate_camera/config/: calibrate_camera.yaml
ada_calibrate_camera/config/calibs/: auto.yaml  manual.yaml
ada_description/rviz/: view_robot.gen3.txt
ada_description/urdf/: ada_expanded.urdf  ada_kortex.xacro
ada_hardware/: CMakeLists.txt
ada_hardware/include/ada_hardware/: gen3.hpp
ada_hardware/src/: gen3.cpp
ada_moveit/launch/: demo.launch.py
ada_moveit_kortex/: CMakeLists.txt  package.xml
ada_moveit_kortex/config/: ada.kortex.urdf.xacro  ada.ros2_control.xacro  ada.srdf  mock_controllers.yaml  moveit_controllers.yaml
ada_moveit_kortex/launch/: demo.launch.py
api_cpp/examples/: CMakeLists.txt
api_cpp/examples/build-gcc-release/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt
api_cpp/gen3_6DoF_leader_follower_example/: CMakeLists.txt  oldCMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/KinovaExample/share/KinovaExample/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ada_calibrate_camera/share/ada_calibrate_camera/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ada_description/share/ada_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/ada_imu/share/ada_imu/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
(+380 files in other folders)
