<?xml version="1.0"?>
<package format="3">
  <name>KinovaExample</name>
  <version>0.1.0</version>
  <description>The KinovaExample package using Kortex API</description>
  <maintainer email="gurnoor@example.com">Gurnoor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
